# repo_django_agenty

./: .coverage  .env  .gitignore  2025-08-17-refactor.txt  ANALIZA_WZORCÓW_PARAGONÓW.md  DATABASE_MIGRATION.md  PLAN_OPTYMALIZACJI_AGENTOW.md  README.md  benchmark_models.py  check_agents.py  clear_logs.sh  db.sqlite3  debug_router.py  dump.rdb  fix_timezone_data.py  migrate_pantry_to_inventory.py  package-lock.json  package.json  plan-ulepszenia-receipt-pipeline.md  plan_checklist.md  polecenia.md  pyproject.toml  pytest.ini  requirements.txt  run_diagnostic_test.py  start.sh  stop.sh  tailwind.config.js  test_e2e_dashboard.py  test_e2e_receipt_pipeline.py  test_hybrid_receipt.py  test_logging.py  test_optimized_agents.py  test_real_receipt_simple.py  test_receipt_fix.py  test_receipt_processing_e2e.py  ui_ux_implementation_checklist.md  ui_ux_implementation_roadmap.md  zmiana_modeli.md
.github/workflows/: ci.yml
chatbot/: RECEIPT_PROCESSOR_OPTIMIZATION.md  admin.py  agent_factory.py  agents.py  consumers.py  conversation_manager.py  interfaces.py  models.py  rag_processor.py  receipt_processor.py  routing.py  schemas.py  serializers.py  tasks.py  tasks_alerts.py  tests.py  urls.py  validators.py  views.py  views_logs.py  views_monitoring.py  weather_service.py  web_search.py
chatbot/api/: __init__.py  drf_views.py  receipt_views.py  serializers.py  tests.py  tests_inventory.py  urls.py  views.py
chatbot/config/: receipt_config.py
chatbot/migrations/: 0001_initial.py  0002_alter_agent_agent_type.py  0003_document.py  0004_alter_agent_agent_type.py  (+13 more)
chroma_db/: chroma.sqlite3
core/: asgi.py  celery.py  database_config.py  settings.py  settings_dev.py  settings_prod.py  urls.py
docs/: roadmap_receipts.md
frontend/: index.html
inventory/: admin.py  models.py  tasks.py  tests.py  tests_performance.py  urls.py  views.py
templates/: base.html  index.html  live_logs.html
(+126 files in other folders)
